# 3dprinterv2

./: B_Drive-1.step.SLDPRT  B_Drive-1.step.STL  README.md
dev_version/: B_Drive-0.step.3mf  B_Drive-0.step.SLDPRT  B_Drive-0.step.STL  TC0mLabV2.SLDASM
inventree-bambulab-farm/: README.md  pyproject.toml
inventree-bambulab-farm/src/inventree_bambulab_farm/: __init__.py  client.py  plugin.py
